nuevas páginas y teis divididos

--- a/edicion/index.html
+++ b/edicion/index.html
@@ -35,198 +35,198 @@
                 <h1>Edición digital de la sección sobre carpintería de armar del manuscrito de Fray Andrés de San Miguel</h1>
             </div>
             <div class="centered-container">
-                <a class="boton" href="../edicion/f72r.html">Comienza a leer aquí</a>
+                <a class="boton" href="../edicion/72r.html">Comienza a leer aquí</a>
                 <p>O selecciona un folio a continuación:</p>
             </div>
             <div class="grid-container">
                 <div class="grid-item">
-                    <a href="f72r.html">
+                    <a href="72r.html">
                         <img src="../assets/images/facsimil/72r.jpg" alt="Folio 72r">
                         <div class="title-overlay">Folio 72r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f72v.html">
+                    <a href="72v.html">
                         <img src="../assets/images/facsimil/72v.jpg" alt="Folio 72v">
                         <div class="title-overlay">Folio 72v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f73r.html">
+                    <a href="73r.html">
                         <img src="../assets/images/facsimil/73r.jpg" alt="Folio 73r">
                         <div class="title-overlay">Folio 73r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f73v.html">
+                    <a href="73v.html">
                         <img src="../assets/images/facsimil/73v.jpg" alt="Folio 73v">
                         <div class="title-overlay">Folio 73v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f74r.html">
+                    <a href="74r.html">
                         <img src="../assets/images/facsimil/74r.jpg" alt="Folio 74r">
                         <div class="title-overlay">Folio 74r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f74v.html">
+                    <a href="74v.html">
                         <img src="../assets/images/facsimil/74v.jpg" alt="Folio 74v">
                         <div class="title-overlay">Folio 74v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f75r.html">
+                    <a href="75r.html">
                         <img src="../assets/images/facsimil/75r.jpg" alt="Folio 75r">
                         <div class="title-overlay">Folio 75r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f75v.html">
+                    <a href="75v.html">
                         <img src="../assets/images/facsimil/75v.jpg" alt="Folio 75v">
                         <div class="title-overlay">Folio 75v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f76r.html">
+                    <a href="76r.html">
                         <img src="../assets/images/facsimil/76r.jpg" alt="Folio 76r">
                         <div class="title-overlay">Folio 76r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f76v.html">
+                    <a href="76v.html">
                         <img src="../assets/images/facsimil/76v.jpg" alt="Folio 76v">
                         <div class="title-overlay">Folio 76v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f77r.html">
+                    <a href="77r.html">
                         <img src="../assets/images/facsimil/77r.jpg" alt="Folio 77r">
                         <div class="title-overlay">Folio 77r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f77v.html">
+                    <a href="77v.html">
                         <img src="../assets/images/facsimil/77v.jpg" alt="Folio 77v">
                         <div class="title-overlay">Folio 77v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f78r.html">
+                    <a href="78r.html">
                         <img src="../assets/images/facsimil/78r.jpg" alt="Folio 78r">
                         <div class="title-overlay">Folio 78r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f78v.html">
+                    <a href="78v.html">
                         <img src="../assets/images/facsimil/78v.jpg" alt="Folio 78v">
                         <div class="title-overlay">Folio 78v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f79r.html">
+                    <a href="79r.html">
                         <img src="../assets/images/facsimil/79r.jpg" alt="Folio 79r">
                         <div class="title-overlay">Folio 79r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f79v.html">
+                    <a href="79v.html">
                         <img src="../assets/images/facsimil/79v.jpg" alt="Folio 79v">
                         <div class="title-overlay">Folio 79v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f80r.html">
+                    <a href="80r.html">
                         <img src="../assets/images/facsimil/80r.jpg" alt="Folio 80r">
                         <div class="title-overlay">Folio 80r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f80v.html">
+                    <a href="80v.html">
                         <img src="../assets/images/facsimil/80v.jpg" alt="Folio 80v">
                         <div class="title-overlay">Folio 80v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f81r.html">
+                    <a href="81r.html">
                         <img src="../assets/images/facsimil/81r.jpg" alt="Folio 81r">
                         <div class="title-overlay">Folio 81r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f81v.html">
+                    <a href="81v.html">
                         <img src="../assets/images/facsimil/81v.jpg" alt="Folio 81v">
                         <div class="title-overlay">Folio 81v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f82r.html">
+                    <a href="82r.html">
                         <img src="../assets/images/facsimil/82r.jpg" alt="Folio 82r">
                         <div class="title-overlay">Folio 82r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f82v.html">
+                    <a href="82v.html">
                         <img src="../assets/images/facsimil/82v.jpg" alt="Folio 82v">
                         <div class="title-overlay">Folio 82v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f83r.html">
+                    <a href="83r.html">
                         <img src="../assets/images/facsimil/83r.jpg" alt="Folio 83r">
                         <div class="title-overlay">Folio 83r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f83v.html">
+                    <a href="83v.html">
                         <img src="../assets/images/facsimil/83v.jpg" alt="Folio 83v">
                         <div class="title-overlay">Folio 83v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f84r.html">
+                    <a href="84r.html">
                         <img src="../assets/images/facsimil/84r.jpg" alt="Folio 84r">
                         <div class="title-overlay">Folio 84r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f84v.html">
+                    <a href="84v.html">
                         <img src="../assets/images/facsimil/84v.jpg" alt="Folio 84v">
                         <div class="title-overlay">Folio 84v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f85r.html">
+                    <a href="85r.html">
                         <img src="../assets/images/facsimil/85r.jpg" alt="Folio 85r">
                         <div class="title-overlay">Folio 85r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f85v.html">
+                    <a href="85v.html">
                         <img src="../assets/images/facsimil/85v.jpg" alt="Folio 85v">
                         <div class="title-overlay">Folio 85v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f86r.html">
+                    <a href="86r.html">
                         <img src="../assets/images/facsimil/86r.jpg" alt="Folio 86r">
                         <div class="title-overlay">Folio 86r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f86v.html">
+                    <a href="86v.html">
                         <img src="../assets/images/facsimil/86v.jpg" alt="Folio 86v">
                         <div class="title-overlay">Folio 86v</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f87r.html">
+                    <a href="87r.html">
                         <img src="../assets/images/facsimil/87r.jpg" alt="Folio 87r">
                         <div class="title-overlay">Folio 87r</div>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="f87v.html">
+                    <a href="87v.html">
                         <img src="../assets/images/facsimil/87v.jpg" alt="Folio 87v">
                         <div class="title-overlay">Folio 87v</div>
                     </a>
