--- a/edicion/74r.html
+++ b/edicion/74r.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edición digital</title>
+    <title>La carpintería de armar en Fray Andrés de San Miguel. Edición digital</title>
     <link rel="icon" type="image/png" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/variables.css">
@@ -30,19 +30,11 @@
     </script>
 
     <div class="container">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <div class="titulo" id="tituloedicion">
-                    <h1>Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel</h1>
-                </div>
-            </div>
-        </div>
     
         <div class="row">
             <div class="col-3">
                 <div id="imagenContainer" class="imagen-fixed">
-                    <img src="../assets/images/facsimil/72r.jpg" alt="Descripción de la imagen" id="miImagen" />
+                    <img src="../assets/images/facsimil/74r.jpg" alt="Descripción de la imagen" id="miImagen" />
                 </div>
                 <div id="modalImagen" class="imagen-modal" style="display: none;">
                     <div class="modal-content-wrapper">
@@ -63,8 +55,8 @@
             </div>
             <div class="col-3">
                 <div class="navegacion-paginas">
-                    <div id="anterior"><a href="#" class="flecha">← Anterior</a></div>                    
-                    <div id="siguiente"><a href="#" class="flecha">Siguiente →</a></div>
+                    <div id="anterior"><a href="73v.html" class="flecha">← Anterior</a></div>                    
+                    <div id="siguiente"><a href="74v.html" class="flecha">Siguiente →</a></div>
                 <div>
                     <a href="tu_enlace_aquí" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
@@ -82,7 +74,7 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            c.getHTML5('../assets/tei/teis/72r.xml', function(data) {
+            c.getHTML5('../assets/tei/teis/74r.xml', function(data) {
                 document.getElementById('xml-tei-container').appendChild(data);
             });
         });
