cambios typo y colores

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div id="creditos">
                 <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamani Fuentes</a>, 
                 con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a> y
-                <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>
+                Leslie Blondet
                 </p>
                 <p>
                     Agradecimientos a <a class="enlace" href="https://www.albanecar.es/" target="_blank">Javier de Mingo</i></a> 
-                    y a <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel María Martín</i></a>
+                    y a <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel Martín</i></a>
                 </p>
                 <p>Con el apoyo de <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/" target="_blank">LLILAS Benson Digital Scholarship</a>, The University of Texas at Austin</p>
             </div>
