--- a/edicion/84v.html
+++ b/edicion/84v.html
@@ -58,7 +58,7 @@
                     <div id="anterior"><a href="84r.html" class="flecha">← Anterior</a></div>                    
                     <div id="siguiente"><a href="85r.html" class="flecha">Siguiente →</a></div>
                 <div>
-                    <a href="tu_enlace_aquí" class="logo-enlace">
+                    <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
                     </a>
                 </div>
