mejoras en el menú

--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
 
     <div id="menu-placeholder"></div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-          fetch("../includes/menu.html")
-            .then(response => response.text())
-            .then(data => {
-              document.getElementById("menu-placeholder").innerHTML = data;
-            });
-        });
-    </script>
-
     
     <!-- PORTADA-->
 <div class="container inicio">    
@@ -61,6 +51,6 @@
 
 
 
-<script src="../assets/js/script.js"></script>
+<script src="../assets/js/script.js"></scrip>
 </body>
 </html>
