--- a/edicion/88v.html
+++ b/edicion/88v.html
@@ -19,15 +19,6 @@
 
     <div id="menu-placeholder"></div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-          fetch("../includes/menu.html")
-            .then(response => response.text())
-            .then(data => {
-              document.getElementById("menu-placeholder").innerHTML = data;
-            });
-        });
-    </script>
 
     <div class="container">
     
@@ -55,7 +46,8 @@
             </div>
             <div class="col-3">
                 <div class="navegacion-paginas">
-                    <div id="anterior"><a href="88r.html" class="flecha">← Anterior</a></div>                    
+                    <div id="anterior"><a href="88r.html" class="flecha">← Anterior</a>                
+                    <div id="siguiente"><a href="#" class="flecha" style="visibility: hidden;">Siguiente →</a></div>
                 <div>
                     <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
@@ -73,7 +65,7 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            c.getHTML5('../assets/tei/teis/88r.xml', function(data) {
+            c.getHTML5('../assets/tei/teis/88v.xml', function(data) {
                 document.getElementById('xml-tei-container').appendChild(data);
             });
         });
