--- a/edicion/77r.html
+++ b/edicion/77r.html
@@ -25,12 +25,12 @@
         <div class="row">
             <div class="col-3">
                 <div id="imagenContainer" class="imagen-fixed">
-                    <img src="../assets/images/facsimil/77r.jpg" alt="Descripción de la imagen" id="miImagen" />
+                    <img src="../assets/images/facsimil/77r.jpg" alt="" id="miImagen" />
                 </div>
                 <div id="modalImagen" class="imagen-modal" style="display: none;">
                     <div class="modal-content-wrapper">
                         <span class="cerrar-imagen">&times;</span>
-                        <img class="imagen-modal-content" id="img01" alt="Descripción de la imagen">
+                        <img class="imagen-modal-content" id="img01" alt="">
                         <div id="caption"></div>
                     </div>
                 </div>
