--- a/edicion/79r.html
+++ b/edicion/79r.html
@@ -48,6 +48,7 @@
                 <div class="navegacion-paginas">
                     <div id="anterior"><a href="78v.html" class="flecha">← Anterior</a></div>                    
                     <div id="siguiente"><a href="79v.html" class="flecha">Siguiente →</a></div>
+                </div>
                 <div>
                     <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
