--- a/edicion/88v.html
+++ b/edicion/88v.html
@@ -48,6 +48,7 @@
                 <div class="navegacion-paginas">
                     <div id="anterior"><a href="88r.html" class="flecha">← Anterior</a>                
                     <div id="siguiente"><a href="#" class="flecha" style="visibility: hidden;">Siguiente →</a></div>
+                </div>
                 <div>
                     <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
