--- a/obra/index.html
+++ b/obra/index.html
@@ -21,29 +21,49 @@
 
     <div class="container">
     <div class="row">
-        <div class="col-9">
+        <div class="col-2">
+            <div id="menu-contenidos">
+                <h5>Contenidos</h5>
+                <ul id="menu-list">
+                  <!-- El menú se llenará dinámicamente con los encabezados -->
+                </ul>
+              </div>
+        </div>
+        <div class="col-9 no-margin-auto">
             <div class="titulo">
-                <h1>Fray Andrés y su obra</h1>
+                <h1 id="FrayAndrésYSuObra">Fray Andrés y su obra</h1>
             </div>
             <div class="texto">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, at molestias ducimus laboriosam illo fugit assumenda nam quam maxime 
-                    placeat officiis consequatur numquam exercitationem enim deleniti voluptates dignissimos veniam quis?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis quod odit eveniet fugiat animi vitae 
-                    minima, tempore magnam, excepturi repudiandae reiciendis tempora quas quidem facere qui unde, provident 
-                    ullam aliquam et doloremque sint modi facilis vero! Nulla, et quia velit amet rerum cupiditate dicta 
-                    inventore ipsum aperiam harum mollitia voluptatibus error fugiat adipisci nam sapiente incidunt odio 
-                    itaque asperiores!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nihil minima quia adipisci soluta culpa 
-                    ut neque aliquam mollitia voluptate dolorum aut tenetur inventore, iusto atque rem quaerat in doloremque 
-                    fuga molestias fugiat? Tenetur fuga maxime velit in reprehenderit expedita? Provident in animi obcaecati. 
-                    Molestiae quae fugiat perferendis ratione, impedit ipsa deserunt quam iste? In, perferendis libero. 
-                    Quo deserunt eaque at, odit error atque praesentium optio libero. Illo eos velit voluptate modi, voluptatem 
-                    veritatis tempore animi unde consequuntur vel deleniti nobis cupiditate, voluptas dolores. 
-                    Ad error molestias, sint sit recusandae quasi sequi assumenda reprehenderit ea consectetur 
-                    at consequatur rem voluptatibus veritatis nam quisquam ratione neque asperiores? Quasi, esse. 
-                    Pariatur voluptatem explicabo magni dolorum illum reiciendis ex corporis aliquid, accusamus laborum!</p>
+                <h2 id="DatosBiográficos">Datos biográficos</h2>
+
+                    <p>Fray Andrés de San Miguel nació en Medina Sidonia (actual Andalucía, España) en 1577, con el nombre de Andrés de Segura de la Alcuña. Se sabe poco sobre su vida antes de emigrar hacia Nueva España, pero se cree que procedía de una familia modesta. A la edad de 16 años, en 1593, embarcó en el Santa María de la Merced en Sevilla. El barco tenía como destino el islote-fortaleza San Juan de Ulúa, donde se llevaron a cabo actividades económicas, incluyendo la recolección de la plata de Nueva España destinada a la Corona en España.</p>
+
+                    <p>El viaje de regreso fue tumultuoso. Tras una estancia en La Habana, el barco naufragó en 1594 en el canal de las Bahamas. Este evento traumático podría haber sido determinante en su decisión de tomar los votos en la Orden Reformada del Monte Carmelo, según el cronista carmelita Fray Manuel de San Jerónimo. Sin embargo, no hay evidencia directa de esto en la relación del viaje ni en otros manuscritos de Fray Andrés. Después de ser rescatado por autoridades españolas, pasó un tiempo en San Agustín, La Florida. En un nuevo intento de zarpar hacia La Habana, el barco fue atacado por piratas. Finalmente, al llegar a Cádiz, España, en 1596, tanto el puerto como la ciudad fueron saqueados por los ingleses.</p>
+
+                    <p>En 1600, ingresó a la Orden de Carmelitas Descalzos y tomó el hábito en el convento de la ciudad de México, profesando como vicario en 1601. Poco se conoce sobre su vida interna en el convento o su educación en artes y ciencias, aunque probablemente se dedicó al estudio de literatura científica en este período.</p>
+
+                    <p>En Nueva España, su reputación creció rápidamente. En 1606, sólo seis años después de su llegada, se le asignó su primer proyecto importante como maestro de arquitectura: la construcción del Convento carmelita del Santo Desierto de los Leones en Coyoacán (hoy Morelos). Posteriormente, entre 1607 y 1615, supervisó la construcción del Definitorio del Convento carmelita de San Sebastián en la Ciudad de México. Dirigió también la edificación del Colegio carmelita de San Angelo entre 1615 y 1616. En 1618, bajo su dirección, se construyó el Convento del Carmen de Querétaro, seguido en 1629 por el segundo edificio del Convento del Carmen de Celaya. En 1630, se documenta su participación en la construcción del Convento del Carmen de Valladolid y en 1644 la del Convento del Carmen de Salvatierra.</p>
+
+                    <p>Además de su labor en conventos, Fray Andrés también se destacó en la construcción de puentes. En 1616, erigió el puente de Nuestra Señora de Guadalupe sobre el río Apatlaco en Jojutla, Morelos. Entre 1629 y 1632, trabajó en el puente sobre el río Lerma, en la ruta de Ciudad de México a Toluca, y finalmente construyó el puente de Batanes al sur de Salvatierra. Otra contribución significativa fue su participación en los trabajos para el desagüe del valle de México, proyecto considerado por Lope Díez de Aux y Armendáriz, virrey de Nueva España, en 1634, y continuado bajo el virrey-obispo Juan de Palafox y Mendoza hasta 1642.</p>
+
+                    <p>Fray Andrés de San Miguel falleció en la ciudad de Salvatierra, Guanajuato, en 1652.</p>
+
+                <h2 id="ComentariosSobreElManuscrito">Comentarios sobre el manuscrito</h2>
+
+                    <p>Aunque no se conoce con exactitud cuándo se escribió la obra, los investigadores coinciden en que debió completarse en algún momento de la década de 1630. El manuscrito parece haber sido redactado en secciones y organizado sin un orden sistemático, lo que le otorga una estructura menos coherente en comparación con los tratados contemporáneos. En definitiva, se trata de una obra compuesta en diferentes períodos. No obstante, el manuscrito puede organizarse en cinco partes diferenciadas:</p>
+
+                    <ol>
+                        <li><strong>Edificación religiosa:</strong> Incluye el Templo de Salomón, algunos templos en el Perú, y las normas para la construcción de iglesias de la orden carmelita.</li>
+                        <li><strong>Tratadística:</strong> Aborda temas de arquitectura, aritmética, geometría, astronomía, perspectiva, carpintería de armar, fundición del plomo, y construcción de relojes de sol.</li>
+                        <li><strong>Obras públicas hidráulicas:</strong> Comprende el tratado sobre el manejo de aguas, acueductos y bombas.</li>
+                        <li><strong>Varia:</strong> Contiene cálculos relacionados con la cantidad de granos de semilla de col que caben en la Tierra, la demostración de la gracia de la Virgen María, y un breve tratado sobre el cultivo de priscos y melocotones.</li>
+                        <li><strong>Dibujos:</strong> Incluye representaciones gráficas relacionadas con la arquitectura y obras de ingeniería hidráulica.</li>
+                    </ol>
+
+                
             </div>
         </div>
+        <div class="col-1"></div>
     </div>
     </div>
 
@@ -52,5 +72,6 @@
    
 
 <script src="../assets/js/script.js"></script>
+
 </body>
 </html>
