--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -21,14 +21,32 @@
 
     <div class="container">
     <div class="row">
-        <div class="col-9">
+        <div class="col-2"></div>
+        <div class="col-9 no-margin-auto">
             <div class="titulo">
                 <h1>Sobre el proyecto</h1>
             </div>
             <div class="texto">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, at molestias ducimus laboriosam illo fugit assumenda nam quam maxime placeat officiis consequatur numquam exercitationem enim deleniti voluptates dignissimos veniam quis?</p>
+                <p>
+                    El proyecto de edición digital de la sección de carpintería de armar en el manuscrito de Fray Andrés de San Miguel (ca. 1630) tiene por objetivo principal: hacer accesible un texto escrito en español antiguo y de carácter técnico. Aunque se publicaron dos ediciones de esta obra en el siglo XX, en 1969 y 1990, estas publicaciones siguen siendo difíciles de acceder debido a su naturaleza técnica y disponibilidad limitada. Como resultado, la creación de una edición digital de acceso abierto no solo busca mejorar la calidad visual del texto, que está enriquecido con ilustraciones complementarias, sino también facilitar una comprensión clara y contemporánea de su contenido a través de un lenguaje anotado. En este sentido, este proyecto representa un avance respecto a las ediciones anteriores del trabajo de Fray Andrés de San Miguel, que sólo transcriben el texto e interpretan visualmente su comprensión de la carpintería, sin notas explicativas. Esto es de gran importancia, ya que el texto es fundamental para entender la construcción de armaduras, mocárabes y cúpulas de media naranja y su ornamentación mediante la lacería.
+
+                </p>
+
+                <p>
+                    La fuente que se utiliza es el manuscrito del siglo XVII de Fray Andrés de San Miguel, que forma parte de la colección digital latinoamericana en la Biblioteca Benson. Está catalogado bajo el número de registro OCLC 31775792. El enfoque exclusivo será en la sección dedicada a la carpintería de armar, abarcando tanto elementos textuales como visuales, y se encuentra en los folios 72r-88v.
+                </p>
+
+                <p>
+                    Todos los datos y archivos utilizados para publicar la edición digital, desde el archivo XML-TEI hasta la estructura web en sí, estarán disponibles y accesibles en acceso abierto a través de un repositorio en GitHub. De esta manera, se busca contribuir a la difusión de las técnicas de carpintería de armar entre especialistas y cualquier persona interesada, independientemente de su conexión con la comunidad académica, en línea con los principios de la ciencia abierta que deben regir los proyectos científicos contemporáneos.
+                </p>
+
+                <p>
+                    Esta edición digital puede ser utilizada en contextos educativos como un recurso educativo abierto, promoviendo el autoaprendizaje a través de la lectura interactiva del manuscrito. Además, esta iniciativa promueve el desarrollo de los cursos de especialización que se imparten en España y América Latina. La creación del sitio web, basada en los principios de minimal computing, garantiza su accesibilidad incluso en condiciones de conectividad limitada y en diversos dispositivos de acceso. Esto se logra aprovechando tecnologías, estándares y formatos abiertos que mitigan el riesgo de obsolescencia y la necesidad de mantenimiento continuo. Reducir las barreras tecnológicas, culturales, sociales y económicas en los proyectos digitales mejora el acceso y la participación, todo bajo el auspicio de la justicia social.
+                </p>
+
             </div>
         </div>
+        <div class="col-1"></div>
     </div>
     </div>
 
