cambio nombre clase logo tei

--- a/edicion/78v.html
+++ b/edicion/78v.html
@@ -50,7 +50,7 @@
                     <div id="siguiente"><a href="79r.html" class="flecha">Siguiente →</a></div>
                 </div>
                 <div>
-                    <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
+                    <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-tei">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
                     </a>
                 </div>
