--- a/edicion/72v.html
+++ b/edicion/72v.html
@@ -51,7 +51,7 @@
                 </div>
                 </div>
                 <div>
-                    <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
+                    <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-tei">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
                     </a>
                 </div>
