--- a/edicion/textocompleto.html
+++ b/edicion/textocompleto.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-enlace">
+                <a href="https://raw.githubusercontent.com/fmamanif/Fray-Andres-de-San-Miguel/main/assets/tei/FrayAndresDeSanMiguel.xml" class="logo-tei">
                     <img src="../assets/images/tei.png" alt="Logo TEI">
                 </a>
             </div>
