mejora de la página proyecto

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -43,6 +43,8 @@
                     <p>
                         Este proyecto ha sido llevado a cabo gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LILLAS Benson Digital Scholarship Fellowship</a>, otorgado en 2023 y ejecutado en 2024. El objetivo de este programa es fomentar el desarrollo de proyectos digitales en torno a las áreas de investigación prioritarias de LILLAS, aprovechando los documentos digitalizados de la colección Benson, especializada en temas de las Américas.
                     </p>
+                    <p style="text-align: center;"><img src="/assets/images/lillasbenson.png" alt="LILLAS Benson" style="height: 80px; width: auto;"></p>
+
 
                     <p>
                         Además, se contó con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</a> (Universitat Autónoma de Barcelona), especialista en Humanidades Digitales, encargado de la edición digital y la creación de la página web; y de Leslie Blondel Ramírez, arquitecta por la Universidad Ricardo Palma, responsable del material visual, gracias a su experiencia en el estudio de la cúpula de lazo del convento de San Francisco de Lima.
