--- a/obra/index.html
+++ b/obra/index.html
@@ -34,7 +34,7 @@
                 <h1 id="FrayAndrésYSuObra">Fray Andrés y su obra</h1>
             </div>
             <div class="texto">
-                <h2>Datos biográficos</h2>
+                <h2>1. Datos biográficos</h2>
                     <p><a class="enlace" href="https://es.wikipedia.org/wiki/Andr%C3%A9s_de_San_Miguel" target="_blank">Fray Andrés de San Miguel</a> nació en Medina Sidonia (actual Andalucía, España) en 1577, con el nombre de Andrés de Segura de la Alcuña o de Andrés de Pina. Se sabe poco sobre su vida antes de emigrar hacia Nueva España, pero se cree que procedía de una familia modesta. A la edad de 16 años, en 1593, embarcó en el Santa María de la Merced en Sevilla. El barco tenía como destino el islote-fortaleza San Juan de Ulúa, donde se llevaron a cabo actividades económicas, incluyendo la recolección de la plata de Nueva España destinada a la Corona en España.</p>
 
                     <p>El viaje de regreso fue tumultuoso. Tras una estancia en La Habana, el barco naufragó en 1595 en el canal de las Bahamas. Este evento traumático podría haber sido determinante en su decisión de tomar los votos en la Orden Reformada del Monte Carmelo, según el cronista carmelita Fray Manuel de San Jerónimo. Sin embargo, no hay evidencia directa de esto en la relación del viaje ni en otros manuscritos de Fray Andrés. Después de ser rescatado por las autoridades españolas, pasó un tiempo en San Agustín, La Florida. En un nuevo intento de zarpar hacia La Habana, el barco fue atacado por piratas. Finalmente, al llegar a Cádiz, España, en 1596, tanto el puerto como la ciudad fueron saqueados por los ingleses.</p>
@@ -47,7 +47,7 @@
 
                     <p>Fray Andrés de San Miguel falleció en la ciudad de Salvatierra, Guanajuato, en 1652.</p>
 
-                <h2>Comentarios sobre el manuscrito</h2>
+                <h2>2. Comentarios sobre el manuscrito</h2>
                     <p>Aunque no se conoce con certeza la fecha exacta de redacción de la obra, los investigadores coinciden en que debió completarse en algún momento de la década de 1630. El manuscrito parece haber sido escrito en varias secciones y organizado de manera no sistemática, lo que le confiere una estructura menos coherente en comparación con otros tratados de la época. Es probable que se trate de una obra compuesta en diferentes periodos. Esto ha llevado a sugerir que no fue escrita íntegramente por Fray Andrés, sino que es una recopilación de textos sobre lo que aprendió del oficio de la arquitectura.</p>
 
                     <p>En este sentido, se han propuesto varios nombres como posibles autores de algunas secciones del manuscrito.</p>
@@ -74,7 +74,7 @@
 
                     <p>En 2007 se publicó una segunda edición dirigida nuevamente por Eduardo Báez Macías. Esta edición amplió el estudio introductorio y las notas, e incluyó la transcripción de las memorias de Fray Andrés, fechadas el 18 de septiembre de 1646, probablemente escritas en la etapa final de su vida en Salvatierra. También se agregaron varias fotografías de edificios construidos por Fray Andrés que aún se conservan. Un aspecto notable es que todas las ilustraciones fueron rehechas, excepto las de la sección de carpintería de armar, que se publicaron facsimilarmente tal como aparecen en el manuscrito.</p>
 
-                <h2>La sección de carpintería de armar</h2>
+                <h2>3. La sección de carpintería de armar</h2>
 
                     <p>Esta sección del manuscrito abarca varios temas:</p>
                     <ol>
