--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -34,12 +34,12 @@
                 <h1 id="SobreElProyecto">Sobre el proyecto</h1>
             </div>
             <div class="texto">
-                <h2 id="Resumen">Resumen del proyecto</h2>
+                <h2 id="Resumen">1. Resumen del proyecto</h2>
                     <p>
                         La edición digital de la sección dedicada a la carpintería de armar del manuscrito de Fray Andrés de San Miguel, financiada gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LILLAS Benson Digital Scholarship Fellowship</a>, tiene por objetivo hacer accesible un texto técnico a través de un recurso digital de acceso abierto. Esta edición se centra en la transcripción paleográfica y modernización del manuscrito, facilitando su lectura y comprensión mediante anotaciones, un etiquetado exhaustivo de términos especializados y la mejora visual del contenido. El proyecto busca difundir las técnicas históricas de carpintería de armar, con especial énfasis en su relevancia para la investigación y restauración contemporánea. Además, pone a disposición de especialistas y el público en general herramientas que fomentan el aprendizaje interactivo, contribuyendo al conocimiento y conservación del patrimonio arquitectónico.
                     </p>
 
-                <h2 id="Creditos">Créditos</h2>
+                <h2 id="Creditos">2. Créditos</h2>
                     <p>
                         Este proyecto ha sido llevado a cabo gracias al programa <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/funding/digital-scholarship-fellowships/" target="_blank">LILLAS Benson Digital Scholarship Fellowship</a>, otorgado en 2023 y ejecutado en 2024. El objetivo de este programa es fomentar el desarrollo de proyectos digitales en torno a las áreas de investigación prioritarias de LILLAS, aprovechando los documentos digitalizados de la colección Benson, especializada en temas de las Américas.
                     </p>
@@ -54,7 +54,7 @@
                         Agradecer también a Javier de Mingo y Ángel Martín, maestros y amigos, cuyo conocimiento científico, destreza técnica y numerosas conversaciones han enriquecido este proyecto, volviendo a la carpintería de armar histórica en un sujeto vigente y con proyección futura.     
                     </p>
 
-                <h2 id="AntecedentesYJustificacion">Antecedentes y justificación</h2>
+                <h2 id="AntecedentesYJustificacion">3. Antecedentes y justificación</h2>
                     <p>
                         Este proyecto tiene como fuentes de inspiración las ediciones anteriores que se realizaron sobre la obra de Fray Andrés: la de Báez de 1969 y su reedición en 2007 y la específica de la sección de carpintería de armar de Nuere en 1990 (ver bibliografía completa <a class="enlace" href="/bibliografia/index.html">aquí</a>).
                     </p>
@@ -71,7 +71,7 @@
                         Las dificultades de acceso a las ediciones anteriores del manuscrito de Fray Andrés motivaron la creación de una edición digital de su sección dedicada a la carpintería de armar. El propósito principal es poner al alcance del público un texto técnico escrito en español antiguo, cuya complejidad y la limitada disponibilidad de versiones impresas han restringido su difusión. Esta edición digital de acceso abierto mejora notablemente la calidad visual del manuscrito, lo complementa con ilustraciones y ofrece un lenguaje anotado que facilita el estudio de armaduras, mocárabes, cúpulas y su ornamentación en lacería. Además, este recurso, diseñado para contextos educativos, promueve el autoaprendizaje mediante la lectura interactiva y fomenta el desarrollo de cursos de especialización en España y América Latina.
                     </p>
 
-                <h2 id="AspectosTecnicos">Aspectos técnicos</h2>
+                <h2 id="AspectosTecnicos">4. Aspectos técnicos</h2>
                     <p>
                         La fuente que se utiliza para la edición digital es el manuscrito del siglo XVII de Fray Andrés de San Miguel, que forma parte de la colección digital latinoamericana en la Biblioteca Benson. Está catalogado bajo el número de registro OCLC 31775792. El enfoque exclusivo será en la sección dedicada a la carpintería de armar, abarcando tanto elementos textuales como visuales, y se encuentra en los folios 72r-88v.
                     </p>
@@ -92,12 +92,12 @@
                         Todos los datos y archivos, desde el XML-TEI hasta la estructura web, están disponibles en acceso abierto a través de repositorios en <a class="enlace" href="https://github.com/fmamanif/Fray-Andres-de-San-Miguel" target="_blank">GitHub</a> y <a class="enlace" href="https://doi.org/10.5281/zenodo.13365293" target="_blank">Zenodo</a>. Este enfoque contribuye a la difusión de las técnicas de carpintería de armar, tanto para especialistas como para el público general, alineándose con los principios de la ciencia abierta y el <a class="enlace" href="https://go-dh.github.io/mincomp/about/" target="_blank">minimal computing</a>. La implementación de estas tecnologías y formatos abiertos asegura la accesibilidad del proyecto incluso en condiciones de conectividad limitada y en una variedad de dispositivos. Además, minimiza el riesgo de obsolescencia y reduce la necesidad de mantenimiento continuo. Al eliminar barreras tecnológicas, culturales, sociales y económicas, este proyecto promueve un acceso equitativo y una mayor participación, en concordancia con los principios de justicia social.
                     </p>
 
-                <h2 id="ResultadosYAportes">Resultados y aportes</h2>
+                <h2 id="ResultadosYAportes">5. Resultados y aportes</h2>
                     <p>
                         El resultado del proyecto es un sitio web dedicado a la sección de carpintería de armar del manuscrito de Fray Andrés de San Miguel, a través del que poder leer el texto, aprender sobre carpintería histórica y sobre el propio Fray Andrés y su obra.
                     </p>
 
-                <h3 id="Transcripcion">Transcripción paleográfica y modernización del texto</h3>
+                <h3 id="Transcripcion">5.1. Transcripción paleográfica y modernización del texto</h3>
                     <p>
                         Para llevar a cabo la edición se realizó, en primer lugar, una transcripción paleográfica desde cero, permitiendo un acercamiento mayor al documento. Aunque se tuvieron en cuenta las ediciones anteriores, una nueva transcripción del manuscrito ha permitido corregir o mejorar ciertas lecturas. Por ejemplo, en un título del folio 72v, tanto Eduardo Báez como Enrique Nuere leen <em>cuadrado</em> donde dice <em>cuajado</em>. Aunque ambas lecturas podrían ser correctas, el texto nos revela correcta la aquí escogida, pues se hace referencia a la decoración de lazo y no a la forma de la estructura que la sostiene, en ocurrencia un almizate.
                     </p>
@@ -118,7 +118,7 @@
                         Todas las modernizaciones y correcciones pueden ser fácilmente deshechas gracias al uso de XML-TEI y JavaScript, a través del botón que permite cambiar la lectura de la versión paleográfica a la moderna.
                     </p>
 
-                <h3 id="Anotacion">Anotación del texto</h3>
+                <h3 id="Anotacion">5.2. Anotación del texto</h3>
                     <p>
                         Uno de los aportes más significativos de la edición es la anotación, llevada a cabo con el objetivo de hacer una lectura acompañada. Si bien las edición y reedición de Eduardo Báez tienen notas al pie de página que definen y explican algunos términos de la sección de carpintería de armar -habiendo un mejora en la 2ª edición-, estas aclaraciones se concentran en aspectos puramente conceptuales y con algunas explicaciones breves. Considerando este precedente y la necesidad de hacer un texto aún más explicativo, se aumentó la cantidad de notas aclaratorias con respecto a estas ediciones.
                     </p>
@@ -131,7 +131,7 @@
                         Finalmente, se creó una categoría especial para la única referencia histórica que aparece en la sección de carpintería de armar de Fray Andrés: la iglesia del convento de Santo Domingo de la Ciudad de México.
                     </p>
 
-                <h3 id="Dibujos">Reproducción de los dibujos del manuscrito</h3>
+                <h3 id="Dibujos">5.3. Reproducción de los dibujos del manuscrito</h3>
                     <p>
                         Uno de los aspectos importantes de la obra de Fray Andrés de San Miguel radica en el uso de material visual. No sabemos si todos los dibujos presentes son de su autoría, pero sin duda son esenciales para entender las explicaciones que se encuentran en el manuscrito. Por lo tanto, la relación texto-imagen es central en el proceso de edición, especialmente porque muchas de las imágenes usadas contienen elementos textuales que señalan puntos que son explicados por Fray Andrés en la parte escrita.
                     </p>
